ui/task-priority-too-high.stderr
error[E0080]: evaluation of constant value failed
 --> $DIR/task-priority-too-high.rs:3:1
  |
3 | #[rtic::app(device = gd32vf103_pac)]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ attempt to compute `8_usize - 9_usize`, which would overflow
  |
  = note: this error originates in the attribute macro `rtic::app` (in Nightly builds, run with -Z macro-backtrace for more info)
